common/force-app/main/default/objects/Interest_Dividend_Transaction_Log_Detail__c/Interest_Dividend_Transaction_Log_Detail__c.object-meta.xml
<CustomObject>
    <label>Interest Dividend Transaction Log Detail</label>
    <nameField>
        <displayFormat>IDTD-{0000}</displayFormat>
        <label>Interest Dividend Transaction Log Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Dividend Transaction Log Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>