common/force-app/main/default/objects/Interest_Dividend_Transaction_Log_Detail__c/fields/Interest_Dividend_Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>Interest_Dividend_Transaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest Dividend Transaction Log</label>
    <referenceTo>Interest_Dividend_Transaction_Log__c</referenceTo>
    <relationshipLabel>Interest Dividend Transaction Log Detail</relationshipLabel>
    <relationshipName>Interest_Dividend_Transaction_Log_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>