common/force-app/main/default/objects/Interest_Dividend_Transaction_Log_Detail__c/fields/Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>Investment_Value__c</fullName>
    <label>Investment Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>