common/force-app/main/default/objects/Interest_Dividend_Transaction_Log_Detail__c/fields/Returns_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Returns_Percentage__c</fullName>
    <label>Returns Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>